<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/chat_navigation"
        android:enabled="true"
        android:icon="@drawable/chat"
        android:title="@string/Chat"/>
    <item
        android:id="@+id/mapa_navigation"
        android:enabled="true"
        android:icon="@drawable/mapas"
        android:title="@string/Mapa"
        />
    <item
        android:id="@+id/principal_navigation"
        android:enabled="true"
        android:icon="@drawable/icon_power"
        android:title=""
        />
    <item
        android:id="@+id/agregar_navigation"
        android:enabled="true"
        android:icon="@drawable/agregar"
        android:title="@string/Agregar"/>
    <item
        android:id="@+id/ajustes_navigation"
        android:enabled="true"
        android:icon="@drawable/ajustes"
        android:title="@string/Ajustes"/>
</menu>